--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,8 @@ body{
     height: 100vh;
     overflow-y: hidden;
 }
+
+.grid-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  }
